bridge/base/0-finalyearproject-namespace.yaml
#! 0-finalyearproject-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: finalyearproject
    labels:
        com.docker.compose.project: finalyearproject
